--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 }
 
 :root {
-  --primary: #2A7AE4;
+  --primary: #dc1a28;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
-  --white: #FFFFFF;
+  --white: #8f8989;
   --frontEnd: #6BD1FF;
   --backEnd: #00C86F;
 }
