--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -1,15 +1,16 @@
 .Logo {
-    max-width: 168px;
+  margin-top: 6px;
+    max-width: 100px;
   }
   @media (max-width: 800px) {
     .Logo {
-      max-width: 105px;
+      max-width: 72px;
     }
   }
   
   .Menu {
     width: 100%;
-    height: 94px;
+    height: 47px;
     z-index: 100;
   
     display: flex;
@@ -20,30 +21,30 @@
     top: 0;
     left: 0;
     right: 0;
-    padding-left: 5%;
+    padding-left: 3%;
     padding-right: 5%;
   
     background: var(--black);
     border-bottom: 2px solid var(--primary);
   }
   body {
-    --bodyPaddingTop: 94px;
+    --bodyPaddingTop: 47px;
     padding-top: var(--bodyPaddingTop);
   }
   @media (max-width: 800px) {
     .Menu {
-      height: 40px;
+      height: 32px;
       justify-content: center;
     }
     body {
-      --bodyPaddingTop: 40px;
+      --bodyPaddingTop: 32px;
       padding-top: var(--bodyPaddingTop);
     }
   }
   
   .ButtonLink {
     color: var(--white);
-    border: 1px solid var(--white);
+    border: none;
     box-sizing: border-box;
     cursor: pointer;
     padding: 16px 24px;
