--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 }
 
 :root {
-  --primary: #dc1a28;
+  --primary: #8c091c;
   --black: #000000;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
   --grayMedium: #e5e5e5; 
-  --white: #8f8989;
+  --white: #fff9f9;
   --frontEnd: #6BD1FF;
   --backEnd: #00C86F;
 }
@@ -24,3 +24,10 @@ body {
 a {
   color: inherit;
 } 
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - var(--bodyPaddingTop));
+}
+
